--- a/tribute.css
+++ b/tribute.css
@@ -1,3 +1,4 @@
+
 #title{
     text-align: center;
 }
@@ -7,7 +8,15 @@
     padding: 20px;
 }
 
+#img-div{
+    text-align: center;
+}
+
 #img-div img{
     max-width: 100%;
     height: 60vh;
 }
+
+/* #tribute-info{
+    text
+} */
